--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,29 +1,37 @@
 version: '3'
 services:
-  devops:
-    image: rahamshaik/devopsreponit:latest
+  delhi:
+    image: aadinath/rahambhau:latest
     ports:
-      - "90:80"
+      - "80:80"
+    volumes:
+      - "delhivol"
     deploy:
       replicas: 3
 
-  aws:
-    image: rahamshaik/awsreponit:latest
+  mumbai:
+    image: aadinath/rahambhau1:latest
     ports:
-      - "91:80"
+      - "81:80"
+    volumes:
+      - "mumbaivol"
     deploy:
       replicas: 3
 
-  datascience:
-    image: rahamshaik/datasciencereponit:latest
+  hyd1:
+    image: aadinath/rahambhau2:latest
     ports:
-      - "92:80"
+      - "82:80"
+    volumes:
+      - "hyd1vol"
     deploy:
       replicas: 3
 
-  azure:
-    image: rahamshaik/azurereponit:latest
+  csk:
+    image: aadinath/rahambhau3:latest
     ports:
-      - "93:80"
+      - "83:80"
+    volumes:
+      - "cskvol"
     deploy:
       replicas: 3
